<resources>
    <string name="app_name">Lost and found</string>
    <string name="username">Username:</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="first_name">First name:</string>
    <string name="enter_e_mail">Enter e-mail</string>
    <string name="e_mail">E-mail:</string>
    <string name="password">Password:</string>
    <string name="enter_password">Enter password</string>
    <string name="register">REGISTER</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="last_name">Last name:</string>
    <string name="passwordLogin">Password</string>
    <string name="login">LOGIN</string>
    <string name="new_notification">New notification</string>
    <string name="title">Title:</string>
    <string name="enter_title">Enter title</string>
    <string name="subject">Subject:</string>
    <string name="enter_subject">Enter subject</string>
    <string name="date">Date:</string>
    <string name="description">Description:</string>
    <string name="enter_description">Enter description..</string>
    <string name="address">Address:</string>
    <string name="enter_address">Enter address</string>
    <string name="hello">Hello,</string>
    <string name="my_notificatons">My notifications</string>
    <string name="all">All notifications</string>
    <string name="notifications_from_other_users">Notifications from other users</string>
</resources>